JBTM-3501: Removing Blacktie code and scripts